--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -309,6 +309,8 @@ section {
             margin-left: 200px;
             margin-top: 10px;
             margin-bottom: 10px;
+            position: relative;
+            transform-style:flat; //fix firefox bug
             .time {
                 display: inline-block;
                 width: 100px;
