finish guest and partner section

--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -1,8 +1,8 @@
 // Magic parallax mixins
 
 $parallax-perspective : 1 !default;
-$parallax-element     : "#page" !default;
-$parallax-ios         : true !default;
+$parallax-element     : "#parallax" !default;
+$parallax-ios         : false !default;
 
 @mixin parallax-init(
   $perspective  : $parallax-perspective,
