--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,4 @@
-@import "mixins";
+// @import "mixins";
 @import "compass/css3";
 @import "compass/utilities/sprites";
 
@@ -37,7 +37,7 @@ $font-lg:16px;
 $font-md:14px;
 $font-sm:12px;
 
-@include parallax-init;
+// @include parallax-init;
 
 body {
     background-position: -120px 0;
@@ -52,7 +52,7 @@ body {
     margin-right: auto;
 }
 .bg-tri-1 {
-    @include parallax(.2);
+    // @include parallax(.2);
     position: absolute;
     top:0;
     left:50%;
@@ -63,25 +63,13 @@ body {
     overflow:hidden;
     z-index: -900;
 }
-.bg-1-triangle {
-    position: absolute;
-    left:0;
-    top:70px;
-    width: 100%;
-    // background-image: url('../imgs/bg-1-triangle.png');
-    background-repeat: no-repeat;
-    height: inherit;
-    z-index: -1000;
-}
 .bg-2-hero {
     position: absolute;
     left:0;
     top:0;
-    width: 100%;
-    height: 857px;
-    background-image: url('../imgs/bg-2-hero.png');
-    background-repeat: no-repeat;
-    z-index: -900;
+    // background-image: url('../imgs/bg-2-hero.png');
+    // background-repeat: no-repeat;
+    z-index: -800;
 }
 .bg-2-page {
     position: absolute;
@@ -152,14 +140,13 @@ section {
 }
 #intro {
     display: block;
-    z-index: 1000;
     .hero-wrap {
-        @include parallax(.6);
+        // @include parallax(.6);
         display: block;
         position: relative;
         width: 710px;
         height: 220px;
-        margin-top: 250px;
+        margin-top: 150px;
         margin-left: auto;
         margin-right: auto;
     }
@@ -191,9 +178,7 @@ section {
         display: block;
         text-align: left;
         width: 667px;
-        margin-top: 200px;
-        margin-left: auto;
-        margin-right: auto;
+        margin: 200px auto 200px;
         color:$purple;
         line-height: 1.5em;
         font-size: $font-lg;
