--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,22 +7,6 @@
 /**
  * varibles
  */
-/* line 21, ../sass/_mixins.scss */
-#parallax {
-  overflow: auto;
-  -moz-perspective: 1px;
-  -webkit-perspective: 1px;
-  perspective: 1px;
-  -moz-transform-style: preserve-3d;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-overflow-scrolling: touch; }
-  /* line 30, ../sass/_mixins.scss */
-  #parallax, #parallax * {
-    -moz-transform-style: preserve-3d;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d; }
-
 /* line 42, ../sass/index.scss */
 body {
   background-position: -120px 0;
@@ -39,11 +23,6 @@ body {
 
 /* line 54, ../sass/index.scss */
 .bg-tri-1 {
-  -moz-transform: translateZ(0.2px) scale(0.8);
-  -ms-transform: translateZ(0.2px) scale(0.8);
-  -webkit-transform: translateZ(0.2px) scale(0.8);
-  transform: translateZ(0.2px) scale(0.8);
-  z-index: 200;
   position: absolute;
   top: 0;
   left: 50%;
@@ -55,27 +34,13 @@ body {
   z-index: -900; }
 
 /* line 66, ../sass/index.scss */
-.bg-1-triangle {
-  position: absolute;
-  left: 0;
-  top: 70px;
-  width: 100%;
-  background-repeat: no-repeat;
-  height: inherit;
-  z-index: -1000; }
-
-/* line 76, ../sass/index.scss */
 .bg-2-hero {
   position: absolute;
   left: 0;
   top: 0;
-  width: 100%;
-  height: 857px;
-  background-image: url("../imgs/bg-2-hero.png");
-  background-repeat: no-repeat;
-  z-index: -900; }
+  z-index: -800; }
 
-/* line 86, ../sass/index.scss */
+/* line 74, ../sass/index.scss */
 .bg-2-page {
   position: absolute;
   left: 0;
@@ -86,7 +51,7 @@ body {
   background-repeat: no-repeat;
   z-index: -900; }
 
-/* line 96, ../sass/index.scss */
+/* line 84, ../sass/index.scss */
 .container {
   width: 1000px;
   padding-top: 10px;
@@ -94,7 +59,7 @@ body {
   margin-right: auto;
   position: relative; }
 
-/* line 103, ../sass/index.scss */
+/* line 91, ../sass/index.scss */
 .title {
   display: block;
   margin-left: auto;
@@ -102,7 +67,7 @@ body {
   width: 140px;
   height: 34px; }
 
-/* line 110, ../sass/index.scss */
+/* line 98, ../sass/index.scss */
 .navbar {
   position: fixed;
   top: 0;
@@ -111,27 +76,27 @@ body {
   height: 70px;
   background-color: #fff;
   overflow-y: scroll; }
-  /* line 118, ../sass/index.scss */
+  /* line 106, ../sass/index.scss */
   .navbar .logo {
     float: left;
     width: 96px;
     height: 45px;
     margin-top: 13px;
     background-position: 0 -971px; }
-  /* line 125, ../sass/index.scss */
+  /* line 113, ../sass/index.scss */
   .navbar .nav-items {
     float: right;
     color: #555;
     font-size: 0; }
-    /* line 129, ../sass/index.scss */
+    /* line 117, ../sass/index.scss */
     .navbar .nav-items .nav-item {
       list-style: none;
       display: inline-block; }
-      /* line 132, ../sass/index.scss */
+      /* line 120, ../sass/index.scss */
       .navbar .nav-items .nav-item:hover, .navbar .nav-items .nav-item:focus, .navbar .nav-items .nav-item.active {
         color: #0b2998;
         font-weight: bold; }
-      /* line 136, ../sass/index.scss */
+      /* line 124, ../sass/index.scss */
       .navbar .nav-items .nav-item a {
         display: inline-block;
         text-align: center;
@@ -143,29 +108,23 @@ body {
         margin-left: 15px;
         color: inherit; }
 
-/* line 150, ../sass/index.scss */
+/* line 138, ../sass/index.scss */
 section {
   padding-top: 80px; }
 
-/* line 153, ../sass/index.scss */
+/* line 141, ../sass/index.scss */
 #intro {
-  display: block;
-  z-index: 1000; }
-  /* line 156, ../sass/index.scss */
+  display: block; }
+  /* line 143, ../sass/index.scss */
   #intro .hero-wrap {
-    -moz-transform: translateZ(0.6px) scale(0.4);
-    -ms-transform: translateZ(0.6px) scale(0.4);
-    -webkit-transform: translateZ(0.6px) scale(0.4);
-    transform: translateZ(0.6px) scale(0.4);
-    z-index: 600;
     display: block;
     position: relative;
     width: 710px;
     height: 220px;
-    margin-top: 250px;
+    margin-top: 150px;
     margin-left: auto;
     margin-right: auto; }
-  /* line 166, ../sass/index.scss */
+  /* line 153, ../sass/index.scss */
   #intro .hero-logo {
     display: block;
     position: absolute;
@@ -175,7 +134,7 @@ section {
     width: 498px;
     height: 218px;
     background-position: 0 -396px; }
-  /* line 177, ../sass/index.scss */
+  /* line 164, ../sass/index.scss */
   #intro .sign-up-btn {
     display: block;
     width: 117px;
@@ -188,21 +147,19 @@ section {
     /* line 59, ../../../../.rvm/gems/ruby-2.1.3/gems/compass-core-1.0.1/stylesheets/compass/utilities/sprites/_base.scss */
     #intro .sign-up-btn:hover, #intro .sign-up-btn.signup-hover {
       background-position: 0 -658px; }
-    /* line 186, ../sass/index.scss */
+    /* line 173, ../sass/index.scss */
     #intro .sign-up-btn:hover, #intro .sign-up-btn:focus {
       background-position: 0 -658px; }
-  /* line 190, ../sass/index.scss */
+  /* line 177, ../sass/index.scss */
   #intro p {
     display: block;
     text-align: left;
     width: 667px;
-    margin-top: 200px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 200px auto 200px;
     color: #0b2998;
     line-height: 1.5em;
     font-size: 16px; }
-    /* line 200, ../sass/index.scss */
+    /* line 185, ../sass/index.scss */
     #intro p .tri {
       display: inline-block;
       width: 22px;
@@ -211,13 +168,13 @@ section {
       margin-right: 10px;
       background-position: 0 -940px; }
 
-/* line 210, ../sass/index.scss */
+/* line 195, ../sass/index.scss */
 #agenda {
   height: 1140px; }
-  /* line 212, ../sass/index.scss */
+  /* line 197, ../sass/index.scss */
   #agenda .title.agenda-title {
     background-position: 0 0; }
-  /* line 215, ../sass/index.scss */
+  /* line 200, ../sass/index.scss */
   #agenda .date-wrap {
     display: block;
     width: 406px;
@@ -227,35 +184,35 @@ section {
     margin-right: auto;
     margin-bottom: 30px;
     list-style: none; }
-    /* line 224, ../sass/index.scss */
+    /* line 209, ../sass/index.scss */
     #agenda .date-wrap li {
       display: inline-block; }
-      /* line 226, ../sass/index.scss */
+      /* line 211, ../sass/index.scss */
       #agenda .date-wrap li a {
         -moz-appearance: none;
         -webkit-appearance: none; }
-    /* line 230, ../sass/index.scss */
+    /* line 215, ../sass/index.scss */
     #agenda .date-wrap .day {
       display: inline-block;
       width: 198px;
       height: 75px; }
-    /* line 235, ../sass/index.scss */
+    /* line 220, ../sass/index.scss */
     #agenda .date-wrap .day1 {
       margin-right: 10px;
       background-position: 0 -118px; }
-      /* line 238, ../sass/index.scss */
+      /* line 223, ../sass/index.scss */
       #agenda .date-wrap .day1.active {
         background-position: 0 -38px; }
-    /* line 242, ../sass/index.scss */
+    /* line 227, ../sass/index.scss */
     #agenda .date-wrap .day2 {
       background-position: 0 -278px; }
-      /* line 244, ../sass/index.scss */
+      /* line 229, ../sass/index.scss */
       #agenda .date-wrap .day2.active {
         background-position: 0 -198px; }
-  /* line 249, ../sass/index.scss */
+  /* line 234, ../sass/index.scss */
   #agenda .timeline-wrap {
     position: relative; }
-    /* line 251, ../sass/index.scss */
+    /* line 236, ../sass/index.scss */
     #agenda .timeline-wrap .line {
       display: block;
       position: absolute;
@@ -264,7 +221,7 @@ section {
       height: 100%;
       height: calc(100% - 25px);
       border-left: 1px solid #0b2998; }
-    /* line 260, ../sass/index.scss */
+    /* line 245, ../sass/index.scss */
     #agenda .timeline-wrap .tl-circle {
       display: block;
       height: 50px;
@@ -278,7 +235,7 @@ section {
       text-align: center;
       background-color: #0b2998;
       border-radius: 50%; }
-    /* line 274, ../sass/index.scss */
+    /* line 259, ../sass/index.scss */
     #agenda .timeline-wrap .tl-dot {
       position: absolute;
       bottom: 25px;
@@ -287,7 +244,7 @@ section {
       width: 10px;
       background-color: #0b2998;
       border-radius: 50%; }
-    /* line 283, ../sass/index.scss */
+    /* line 268, ../sass/index.scss */
     #agenda .timeline-wrap .tl-mod {
       display: block;
       position: relative;
@@ -297,18 +254,18 @@ section {
       margin-left: 200px;
       margin-top: 10px;
       margin-bottom: 10px; }
-      /* line 292, ../sass/index.scss */
+      /* line 277, ../sass/index.scss */
       #agenda .timeline-wrap .tl-mod .time {
         display: inline-block;
         width: 100px;
         text-align: right;
         color: #0b2998;
         font-size: 16px; }
-      /* line 299, ../sass/index.scss */
+      /* line 284, ../sass/index.scss */
       #agenda .timeline-wrap .tl-mod .tl-dot {
         top: 20px;
         left: 105px; }
-      /* line 303, ../sass/index.scss */
+      /* line 288, ../sass/index.scss */
       #agenda .timeline-wrap .tl-mod .topic-mod {
         display: inline-block;
         vertical-align: top;
@@ -316,29 +273,29 @@ section {
         width: 455px;
         height: inherit;
         background-color: #eee; }
-        /* line 310, ../sass/index.scss */
+        /* line 295, ../sass/index.scss */
         #agenda .timeline-wrap .tl-mod .topic-mod .topic {
           float: left;
           margin-left: 20px;
           font-size: 18px;
           color: #555; }
-        /* line 316, ../sass/index.scss */
+        /* line 301, ../sass/index.scss */
         #agenda .timeline-wrap .tl-mod .topic-mod .author {
           float: right;
           margin-right: 20px;
           font-size: 12px;
           color: #909090; }
-        /* line 322, ../sass/index.scss */
+        /* line 307, ../sass/index.scss */
         #agenda .timeline-wrap .tl-mod .topic-mod:hover, #agenda .timeline-wrap .tl-mod .topic-mod:focus {
           background-color: #f6f6f6; }
-        /* line 326, ../sass/index.scss */
+        /* line 311, ../sass/index.scss */
         #agenda .timeline-wrap .tl-mod .topic-mod.light {
           background-color: #fdfdfd;
           border: 1px solid #ddd; }
-          /* line 329, ../sass/index.scss */
+          /* line 314, ../sass/index.scss */
           #agenda .timeline-wrap .tl-mod .topic-mod.light .topic {
             font-size: 14px; }
-    /* line 338, ../sass/index.scss */
+    /* line 323, ../sass/index.scss */
     #agenda .timeline-wrap .tl-mod-lg {
       display: block;
       font-size: 0;
@@ -347,7 +304,7 @@ section {
       margin-bottom: 10px;
       position: relative;
       transform-style: flat; }
-      /* line 346, ../sass/index.scss */
+      /* line 331, ../sass/index.scss */
       #agenda .timeline-wrap .tl-mod-lg .time {
         display: inline-block;
         width: 100px;
@@ -356,29 +313,29 @@ section {
         text-align: right;
         color: #0b2998;
         font-size: 16px; }
-      /* line 355, ../sass/index.scss */
+      /* line 340, ../sass/index.scss */
       #agenda .timeline-wrap .tl-mod-lg .tl-dot {
         top: 20px;
         left: 105px; }
-      /* line 359, ../sass/index.scss */
+      /* line 344, ../sass/index.scss */
       #agenda .timeline-wrap .tl-mod-lg .tab-block {
         display: inline-block;
         vertical-align: top;
         margin-left: 28px;
         width: 464px;
         font-size: 16px; }
-        /* line 365, ../sass/index.scss */
+        /* line 350, ../sass/index.scss */
         #agenda .timeline-wrap .tl-mod-lg .tab-block .tabs {
           list-style: none;
           font-size: 0; }
-          /* line 368, ../sass/index.scss */
+          /* line 353, ../sass/index.scss */
           #agenda .timeline-wrap .tl-mod-lg .tab-block .tabs li {
             display: inline-block;
             margin-right: 1px; }
-            /* line 371, ../sass/index.scss */
+            /* line 356, ../sass/index.scss */
             #agenda .timeline-wrap .tl-mod-lg .tab-block .tabs li:last-child {
               margin-right: 0; }
-            /* line 374, ../sass/index.scss */
+            /* line 359, ../sass/index.scss */
             #agenda .timeline-wrap .tl-mod-lg .tab-block .tabs li a {
               display: inline-block;
               width: 154px;
@@ -388,18 +345,18 @@ section {
               font-size: 16px;
               color: #555;
               background-color: #eee; }
-              /* line 383, ../sass/index.scss */
+              /* line 368, ../sass/index.scss */
               #agenda .timeline-wrap .tl-mod-lg .tab-block .tabs li a small {
                 font-size: 12px; }
-              /* line 386, ../sass/index.scss */
+              /* line 371, ../sass/index.scss */
               #agenda .timeline-wrap .tl-mod-lg .tab-block .tabs li a.active {
                 color: #fff;
                 background-color: #0b2998; }
-        /* line 393, ../sass/index.scss */
+        /* line 378, ../sass/index.scss */
         #agenda .timeline-wrap .tl-mod-lg .tab-block .tab-content {
           width: 464px;
           border: 1px solid #0b2998; }
-          /* line 396, ../sass/index.scss */
+          /* line 381, ../sass/index.scss */
           #agenda .timeline-wrap .tl-mod-lg .tab-block .tab-content .topic-mod {
             display: block;
             height: 43px;
@@ -407,35 +364,35 @@ section {
             width: 100%;
             border-bottom: 1px solid #ddd;
             background-color: #fdfdfd; }
-            /* line 403, ../sass/index.scss */
+            /* line 388, ../sass/index.scss */
             #agenda .timeline-wrap .tl-mod-lg .tab-block .tab-content .topic-mod:last-child {
               border-bottom: none; }
-            /* line 406, ../sass/index.scss */
+            /* line 391, ../sass/index.scss */
             #agenda .timeline-wrap .tl-mod-lg .tab-block .tab-content .topic-mod:hover, #agenda .timeline-wrap .tl-mod-lg .tab-block .tab-content .topic-mod:focus {
               background-color: #f6f6f6; }
-            /* line 409, ../sass/index.scss */
+            /* line 394, ../sass/index.scss */
             #agenda .timeline-wrap .tl-mod-lg .tab-block .tab-content .topic-mod .topic {
               float: left;
               margin-left: 20px;
               font-size: 18px;
               color: #555; }
-            /* line 415, ../sass/index.scss */
+            /* line 400, ../sass/index.scss */
             #agenda .timeline-wrap .tl-mod-lg .tab-block .tab-content .topic-mod .author {
               float: right;
               margin-right: 20px;
               font-size: 12px;
               color: #909090; }
 
-/* line 428, ../sass/index.scss */
+/* line 413, ../sass/index.scss */
 #special-guest {
   height: 644px;
   background-color: #fed939;
   color: #0b2998;
   z-index: -1000; }
-  /* line 433, ../sass/index.scss */
+  /* line 418, ../sass/index.scss */
   #special-guest .title.special-guest-title {
     background-position: 0 -902px; }
-  /* line 436, ../sass/index.scss */
+  /* line 421, ../sass/index.scss */
   #special-guest p.leading {
     display: block;
     width: 590px;
@@ -446,13 +403,13 @@ section {
     line-height: 1.5em;
     font-size: 16px;
     text-align: center; }
-  /* line 447, ../sass/index.scss */
+  /* line 432, ../sass/index.scss */
   #special-guest .guest-wrap {
     width: 945px;
     margin-left: auto;
     margin-right: auto;
     font-size: 0; }
-    /* line 452, ../sass/index.scss */
+    /* line 437, ../sass/index.scss */
     #special-guest .guest-wrap .guest {
       display: inline-block;
       width: 235px;
@@ -460,7 +417,7 @@ section {
       margin-right: 1px;
       background-color: #f6f6f6;
       position: relative; }
-      /* line 459, ../sass/index.scss */
+      /* line 444, ../sass/index.scss */
       #special-guest .guest-wrap .guest .mask {
         position: absolute;
         display: none;
@@ -471,65 +428,65 @@ section {
         text-align: center;
         background-color: #25bff8;
         background-color: rgba(37, 191, 248, 0.8); }
-        /* line 469, ../sass/index.scss */
+        /* line 454, ../sass/index.scss */
         #special-guest .guest-wrap .guest .mask .name {
           font-size: 18px;
           margin-top: 10px;
           margin-bottom: 10px; }
-        /* line 474, ../sass/index.scss */
+        /* line 459, ../sass/index.scss */
         #special-guest .guest-wrap .guest .mask .intro {
           font-size: 14px; }
-      /* line 479, ../sass/index.scss */
+      /* line 464, ../sass/index.scss */
       #special-guest .guest-wrap .guest:hover .mask, #special-guest .guest-wrap .guest:focus .mask {
         display: block; }
 
-/* line 492, ../sass/index.scss */
+/* line 477, ../sass/index.scss */
 #guest .title.guest-title {
   background-position: 0 -358px; }
-/* line 495, ../sass/index.scss */
+/* line 480, ../sass/index.scss */
 #guest .guest-wrap {
   width: 845px;
   margin-left: auto;
   margin-right: auto;
   font-size: 0; }
-  /* line 500, ../sass/index.scss */
+  /* line 485, ../sass/index.scss */
   #guest .guest-wrap.narrow {
     width: 665px; }
-/* line 504, ../sass/index.scss */
+/* line 489, ../sass/index.scss */
 #guest .guest-mod {
   display: inline-block;
   margin-top: 50px;
   margin-right: 48px;
   text-align: center; }
-  /* line 509, ../sass/index.scss */
+  /* line 494, ../sass/index.scss */
   #guest .guest-mod:last-child {
     margin-right: 0; }
-  /* line 512, ../sass/index.scss */
+  /* line 497, ../sass/index.scss */
   #guest .guest-mod .avatar {
     display: block;
     width: 130px;
     height: 130px;
     border-radius: 50%;
     background-color: #f6f6f6; }
-  /* line 519, ../sass/index.scss */
+  /* line 504, ../sass/index.scss */
   #guest .guest-mod .name {
     font-size: 16px;
     margin-top: 20px;
     margin-bottom: 10px; }
-  /* line 525, ../sass/index.scss */
+  /* line 510, ../sass/index.scss */
   #guest .guest-mod .intro {
     font-size: 12px; }
 
-/* line 532, ../sass/index.scss */
+/* line 517, ../sass/index.scss */
 #partner .title.partner-title {
   background-position: 0 -619px;
   margin-bottom: 40px; }
-/* line 536, ../sass/index.scss */
+/* line 521, ../sass/index.scss */
 #partner .partner-wrap {
   padding-left: 25px;
   padding-right: 25px;
   font-size: 0; }
-/* line 541, ../sass/index.scss */
+/* line 526, ../sass/index.scss */
 #partner .partner-logo {
   display: inline-block;
   width: 120px;
@@ -538,10 +495,10 @@ section {
   background-color: #fed939;
   -webkit-filter: grayscale(1);
   filter: grayscale(1); }
-  /* line 548, ../sass/index.scss */
+  /* line 533, ../sass/index.scss */
   #partner .partner-logo:hover {
     -webkit-filter: grayscale(0);
     filter: grayscale(0); }
-  /* line 551, ../sass/index.scss */
+  /* line 536, ../sass/index.scss */
   #partner .partner-logo:last-child {
     margin-right: 0; }
