--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -622,14 +622,14 @@ section {
                 font-size: $font-md;
             }
         }
-        .datetime {
+        .datetime-wrap {
             .iconfont {
                 margin-right: 10px;
             }
             margin-top: 10px;
             font-size: $font-md;
         }
-        .location {
+        .location-wrap {
             .iconfont {
                 margin-right: 10px;
             }
