--- a/src/css/index.css
+++ b/src/css/index.css
@@ -83,7 +83,11 @@ body {
     width: 140px;
     height: 34px; }
 
-/* line 114, ../sass/index.scss */
+@media (max-width: 1000px) {
+  /* line 114, ../sass/index.scss */
+  .container {
+    width: 100%; } }
+/* line 119, ../sass/index.scss */
 .navbar {
   position: fixed;
   top: 0;
@@ -92,27 +96,27 @@ body {
   height: 70px;
   background-color: #fff;
   overflow-y: scroll; }
-  /* line 122, ../sass/index.scss */
+  /* line 127, ../sass/index.scss */
   .navbar .logo {
     float: left;
     width: 96px;
     height: 45px;
     margin-top: 13px;
     background-position: 0 -971px; }
-  /* line 129, ../sass/index.scss */
+  /* line 134, ../sass/index.scss */
   .navbar .nav-items {
     float: right;
     color: #555;
     font-size: 0; }
-    /* line 133, ../sass/index.scss */
+    /* line 138, ../sass/index.scss */
     .navbar .nav-items .nav-item {
       list-style: none;
       display: inline-block; }
-      /* line 136, ../sass/index.scss */
+      /* line 141, ../sass/index.scss */
       .navbar .nav-items .nav-item:hover, .navbar .nav-items .nav-item:focus, .navbar .nav-items .nav-item.active {
         color: #0b2998;
         font-weight: bold; }
-      /* line 140, ../sass/index.scss */
+      /* line 145, ../sass/index.scss */
       .navbar .nav-items .nav-item a {
         display: inline-block;
         text-align: center;
@@ -124,14 +128,14 @@ body {
         margin-left: 15px;
         color: inherit; }
 
-/* line 154, ../sass/index.scss */
+/* line 159, ../sass/index.scss */
 section {
   padding-top: 80px; }
 
-/* line 157, ../sass/index.scss */
+/* line 162, ../sass/index.scss */
 #intro {
   display: block; }
-  /* line 159, ../sass/index.scss */
+  /* line 164, ../sass/index.scss */
   #intro .hero-wrap {
     display: block;
     position: relative;
@@ -140,7 +144,7 @@ section {
     margin-top: 150px;
     margin-left: auto;
     margin-right: auto; }
-  /* line 169, ../sass/index.scss */
+  /* line 174, ../sass/index.scss */
   #intro .hero-logo {
     display: block;
     position: absolute;
@@ -150,7 +154,7 @@ section {
     width: 498px;
     height: 218px;
     background-position: 0 -396px; }
-  /* line 180, ../sass/index.scss */
+  /* line 185, ../sass/index.scss */
   #intro .sign-up-btn {
     display: block;
     width: 117px;
@@ -163,10 +167,10 @@ section {
     /* line 59, ../../../../.rvm/gems/ruby-2.1.3/gems/compass-core-1.0.1/stylesheets/compass/utilities/sprites/_base.scss */
     #intro .sign-up-btn:hover, #intro .sign-up-btn.signup-hover {
       background-position: 0 -658px; }
-    /* line 189, ../sass/index.scss */
+    /* line 194, ../sass/index.scss */
     #intro .sign-up-btn:hover, #intro .sign-up-btn:focus {
       background-position: 0 -658px; }
-  /* line 193, ../sass/index.scss */
+  /* line 198, ../sass/index.scss */
   #intro p {
     display: block;
     text-align: left;
@@ -175,7 +179,7 @@ section {
     color: #0b2998;
     line-height: 1.5em;
     font-size: 16px; }
-    /* line 201, ../sass/index.scss */
+    /* line 206, ../sass/index.scss */
     #intro p .tri {
       display: inline-block;
       width: 22px;
@@ -184,51 +188,51 @@ section {
       margin-right: 10px;
       background-position: 0 -940px; }
 
-/* line 211, ../sass/index.scss */
+/* line 216, ../sass/index.scss */
 #agenda {
   height: 1140px; }
-  /* line 213, ../sass/index.scss */
+  /* line 218, ../sass/index.scss */
   #agenda .title.agenda-title {
     background-position: 0 0; }
-  /* line 216, ../sass/index.scss */
+  /* line 221, ../sass/index.scss */
   #agenda .date-wrap {
     display: block;
     width: 406px;
     font-size: 0;
-    margin-top: 10px;
+    margin-top: 40px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
     list-style: none; }
-    /* line 225, ../sass/index.scss */
+    /* line 230, ../sass/index.scss */
     #agenda .date-wrap li {
       display: inline-block; }
-      /* line 227, ../sass/index.scss */
+      /* line 232, ../sass/index.scss */
       #agenda .date-wrap li a {
         -moz-appearance: none;
         -webkit-appearance: none; }
-    /* line 231, ../sass/index.scss */
+    /* line 236, ../sass/index.scss */
     #agenda .date-wrap .day {
       display: inline-block;
       width: 198px;
       height: 75px; }
-    /* line 236, ../sass/index.scss */
+    /* line 241, ../sass/index.scss */
     #agenda .date-wrap .day1 {
       margin-right: 10px;
       background-position: 0 -118px; }
-      /* line 239, ../sass/index.scss */
+      /* line 244, ../sass/index.scss */
       #agenda .date-wrap .day1.active {
         background-position: 0 -38px; }
-    /* line 243, ../sass/index.scss */
+    /* line 248, ../sass/index.scss */
     #agenda .date-wrap .day2 {
       background-position: 0 -278px; }
-      /* line 245, ../sass/index.scss */
+      /* line 250, ../sass/index.scss */
       #agenda .date-wrap .day2.active {
         background-position: 0 -198px; }
-  /* line 250, ../sass/index.scss */
+  /* line 255, ../sass/index.scss */
   #agenda .timeline-wrap {
     position: relative; }
-    /* line 252, ../sass/index.scss */
+    /* line 257, ../sass/index.scss */
     #agenda .timeline-wrap .line {
       display: block;
       position: absolute;
@@ -237,7 +241,7 @@ section {
       height: 100%;
       height: calc(100% - 25px);
       border-left: 1px solid #0b2998; }
-    /* line 261, ../sass/index.scss */
+    /* line 266, ../sass/index.scss */
     #agenda .timeline-wrap .tl-circle {
       display: block;
       height: 50px;
@@ -251,7 +255,7 @@ section {
       text-align: center;
       background-color: #0b2998;
       border-radius: 50%; }
-    /* line 275, ../sass/index.scss */
+    /* line 280, ../sass/index.scss */
     #agenda .timeline-wrap .tl-dot {
       position: absolute;
       bottom: 25px;
@@ -260,7 +264,7 @@ section {
       width: 10px;
       background-color: #0b2998;
       border-radius: 50%; }
-    /* line 284, ../sass/index.scss */
+    /* line 289, ../sass/index.scss */
     #agenda .timeline-wrap .tl-mod {
       display: block;
       position: relative;
@@ -270,18 +274,18 @@ section {
       margin-left: 200px;
       margin-top: 10px;
       margin-bottom: 10px; }
-      /* line 293, ../sass/index.scss */
+      /* line 298, ../sass/index.scss */
       #agenda .timeline-wrap .tl-mod .time {
         display: inline-block;
         width: 100px;
         text-align: right;
         color: #0b2998;
         font-size: 16px; }
-      /* line 300, ../sass/index.scss */
+      /* line 305, ../sass/index.scss */
       #agenda .timeline-wrap .tl-mod .tl-dot {
         top: 20px;
         left: 105px; }
-      /* line 304, ../sass/index.scss */
+      /* line 309, ../sass/index.scss */
       #agenda .timeline-wrap .tl-mod .topic-mod {
         display: inline-block;
         vertical-align: top;
@@ -289,29 +293,29 @@ section {
         width: 455px;
         height: inherit;
         background-color: #eee; }
-        /* line 311, ../sass/index.scss */
+        /* line 316, ../sass/index.scss */
         #agenda .timeline-wrap .tl-mod .topic-mod .topic {
           float: left;
           margin-left: 20px;
           font-size: 18px;
           color: #555; }
-        /* line 317, ../sass/index.scss */
+        /* line 322, ../sass/index.scss */
         #agenda .timeline-wrap .tl-mod .topic-mod .author {
           float: right;
           margin-right: 20px;
           font-size: 12px;
           color: #909090; }
-        /* line 323, ../sass/index.scss */
+        /* line 328, ../sass/index.scss */
         #agenda .timeline-wrap .tl-mod .topic-mod:hover, #agenda .timeline-wrap .tl-mod .topic-mod:focus {
           background-color: #f6f6f6; }
-        /* line 327, ../sass/index.scss */
+        /* line 332, ../sass/index.scss */
         #agenda .timeline-wrap .tl-mod .topic-mod.light {
           background-color: #fdfdfd;
           border: 1px solid #ddd; }
-          /* line 330, ../sass/index.scss */
+          /* line 335, ../sass/index.scss */
           #agenda .timeline-wrap .tl-mod .topic-mod.light .topic {
             font-size: 14px; }
-    /* line 339, ../sass/index.scss */
+    /* line 344, ../sass/index.scss */
     #agenda .timeline-wrap .tl-mod-lg {
       display: block;
       font-size: 0;
@@ -320,7 +324,7 @@ section {
       margin-bottom: 10px;
       position: relative;
       transform-style: flat; }
-      /* line 347, ../sass/index.scss */
+      /* line 352, ../sass/index.scss */
       #agenda .timeline-wrap .tl-mod-lg .time {
         display: inline-block;
         width: 100px;
@@ -329,29 +333,29 @@ section {
         text-align: right;
         color: #0b2998;
         font-size: 16px; }
-      /* line 356, ../sass/index.scss */
+      /* line 361, ../sass/index.scss */
       #agenda .timeline-wrap .tl-mod-lg .tl-dot {
         top: 20px;
         left: 105px; }
-      /* line 360, ../sass/index.scss */
+      /* line 365, ../sass/index.scss */
       #agenda .timeline-wrap .tl-mod-lg .tab-block {
         display: inline-block;
         vertical-align: top;
         margin-left: 28px;
         width: 464px;
         font-size: 16px; }
-        /* line 366, ../sass/index.scss */
+        /* line 371, ../sass/index.scss */
         #agenda .timeline-wrap .tl-mod-lg .tab-block .tabs {
           list-style: none;
           font-size: 0; }
-          /* line 369, ../sass/index.scss */
+          /* line 374, ../sass/index.scss */
           #agenda .timeline-wrap .tl-mod-lg .tab-block .tabs li {
             display: inline-block;
             margin-right: 1px; }
-            /* line 372, ../sass/index.scss */
+            /* line 377, ../sass/index.scss */
             #agenda .timeline-wrap .tl-mod-lg .tab-block .tabs li:last-child {
               margin-right: 0; }
-            /* line 375, ../sass/index.scss */
+            /* line 380, ../sass/index.scss */
             #agenda .timeline-wrap .tl-mod-lg .tab-block .tabs li a {
               display: inline-block;
               width: 154px;
@@ -361,18 +365,18 @@ section {
               font-size: 16px;
               color: #555;
               background-color: #eee; }
-              /* line 384, ../sass/index.scss */
+              /* line 389, ../sass/index.scss */
               #agenda .timeline-wrap .tl-mod-lg .tab-block .tabs li a small {
                 font-size: 12px; }
-              /* line 387, ../sass/index.scss */
+              /* line 392, ../sass/index.scss */
               #agenda .timeline-wrap .tl-mod-lg .tab-block .tabs li a.active {
                 color: #fff;
                 background-color: #0b2998; }
-        /* line 394, ../sass/index.scss */
+        /* line 399, ../sass/index.scss */
         #agenda .timeline-wrap .tl-mod-lg .tab-block .tab-content {
           width: 464px;
           border: 1px solid #0b2998; }
-          /* line 397, ../sass/index.scss */
+          /* line 402, ../sass/index.scss */
           #agenda .timeline-wrap .tl-mod-lg .tab-block .tab-content .topic-mod {
             display: block;
             height: 43px;
@@ -380,35 +384,35 @@ section {
             width: 100%;
             border-bottom: 1px solid #ddd;
             background-color: #fdfdfd; }
-            /* line 404, ../sass/index.scss */
+            /* line 409, ../sass/index.scss */
             #agenda .timeline-wrap .tl-mod-lg .tab-block .tab-content .topic-mod:last-child {
               border-bottom: none; }
-            /* line 407, ../sass/index.scss */
+            /* line 412, ../sass/index.scss */
             #agenda .timeline-wrap .tl-mod-lg .tab-block .tab-content .topic-mod:hover, #agenda .timeline-wrap .tl-mod-lg .tab-block .tab-content .topic-mod:focus {
               background-color: #f6f6f6; }
-            /* line 410, ../sass/index.scss */
+            /* line 415, ../sass/index.scss */
             #agenda .timeline-wrap .tl-mod-lg .tab-block .tab-content .topic-mod .topic {
               float: left;
               margin-left: 20px;
               font-size: 18px;
               color: #555; }
-            /* line 416, ../sass/index.scss */
+            /* line 421, ../sass/index.scss */
             #agenda .timeline-wrap .tl-mod-lg .tab-block .tab-content .topic-mod .author {
               float: right;
               margin-right: 20px;
               font-size: 12px;
               color: #909090; }
 
-/* line 429, ../sass/index.scss */
+/* line 434, ../sass/index.scss */
 #special-guest {
   height: 644px;
   background-color: #fed939;
   color: #0b2998;
   z-index: -1000; }
-  /* line 434, ../sass/index.scss */
+  /* line 439, ../sass/index.scss */
   #special-guest .title.special-guest-title {
     background-position: 0 -902px; }
-  /* line 437, ../sass/index.scss */
+  /* line 442, ../sass/index.scss */
   #special-guest p.leading {
     display: block;
     width: 590px;
@@ -419,13 +423,13 @@ section {
     line-height: 1.5em;
     font-size: 16px;
     text-align: center; }
-  /* line 448, ../sass/index.scss */
+  /* line 453, ../sass/index.scss */
   #special-guest .guest-wrap {
     width: 945px;
     margin-left: auto;
     margin-right: auto;
     font-size: 0; }
-    /* line 453, ../sass/index.scss */
+    /* line 458, ../sass/index.scss */
     #special-guest .guest-wrap .guest {
       display: inline-block;
       width: 235px;
@@ -433,7 +437,7 @@ section {
       margin-right: 1px;
       background-color: #f6f6f6;
       position: relative; }
-      /* line 460, ../sass/index.scss */
+      /* line 465, ../sass/index.scss */
       #special-guest .guest-wrap .guest .mask {
         position: absolute;
         display: none;
@@ -444,65 +448,65 @@ section {
         text-align: center;
         background-color: #25bff8;
         background-color: rgba(37, 191, 248, 0.8); }
-        /* line 470, ../sass/index.scss */
+        /* line 475, ../sass/index.scss */
         #special-guest .guest-wrap .guest .mask .name {
           font-size: 18px;
           margin-top: 10px;
           margin-bottom: 10px; }
-        /* line 475, ../sass/index.scss */
+        /* line 480, ../sass/index.scss */
         #special-guest .guest-wrap .guest .mask .intro {
           font-size: 14px; }
-      /* line 480, ../sass/index.scss */
+      /* line 485, ../sass/index.scss */
       #special-guest .guest-wrap .guest:hover .mask, #special-guest .guest-wrap .guest:focus .mask {
         display: block; }
 
-/* line 493, ../sass/index.scss */
+/* line 498, ../sass/index.scss */
 #guest .title.guest-title {
   background-position: 0 -358px; }
-/* line 496, ../sass/index.scss */
+/* line 501, ../sass/index.scss */
 #guest .guest-wrap {
   width: 845px;
   margin-left: auto;
   margin-right: auto;
   font-size: 0; }
-  /* line 501, ../sass/index.scss */
+  /* line 506, ../sass/index.scss */
   #guest .guest-wrap.narrow {
     width: 665px; }
-/* line 505, ../sass/index.scss */
+/* line 510, ../sass/index.scss */
 #guest .guest-mod {
   display: inline-block;
   margin-top: 50px;
   margin-right: 48px;
   text-align: center; }
-  /* line 510, ../sass/index.scss */
+  /* line 515, ../sass/index.scss */
   #guest .guest-mod:last-child {
     margin-right: 0; }
-  /* line 513, ../sass/index.scss */
+  /* line 518, ../sass/index.scss */
   #guest .guest-mod .avatar {
     display: block;
     width: 130px;
     height: 130px;
     border-radius: 50%;
     background-color: #f6f6f6; }
-  /* line 520, ../sass/index.scss */
+  /* line 525, ../sass/index.scss */
   #guest .guest-mod .name {
     font-size: 16px;
     margin-top: 20px;
     margin-bottom: 10px; }
-  /* line 526, ../sass/index.scss */
+  /* line 531, ../sass/index.scss */
   #guest .guest-mod .intro {
     font-size: 12px; }
 
-/* line 533, ../sass/index.scss */
+/* line 538, ../sass/index.scss */
 #partner .title.partner-title {
   background-position: 0 -619px;
   margin-bottom: 40px; }
-/* line 537, ../sass/index.scss */
+/* line 542, ../sass/index.scss */
 #partner .partner-wrap {
   padding-left: 25px;
   padding-right: 25px;
   font-size: 0; }
-/* line 542, ../sass/index.scss */
+/* line 547, ../sass/index.scss */
 #partner .partner-logo {
   display: inline-block;
   width: 120px;
@@ -511,18 +515,18 @@ section {
   background-color: #fed939;
   -webkit-filter: grayscale(1);
   filter: grayscale(1); }
-  /* line 549, ../sass/index.scss */
+  /* line 554, ../sass/index.scss */
   #partner .partner-logo:hover {
     -webkit-filter: grayscale(0);
     filter: grayscale(0); }
-  /* line 552, ../sass/index.scss */
+  /* line 557, ../sass/index.scss */
   #partner .partner-logo:last-child {
     margin-right: 0; }
 
 /**
  * Modal
  */
-/* line 561, ../sass/index.scss */
+/* line 566, ../sass/index.scss */
 .modal-dialog {
   display: none;
   position: fixed;
@@ -534,7 +538,7 @@ section {
   background: #FFF;
   color: #555;
   border: 6px solid #0b2998; }
-  /* line 574, ../sass/index.scss */
+  /* line 579, ../sass/index.scss */
   .modal-dialog .jqmClose {
     color: #fff;
     position: absolute;
@@ -542,65 +546,65 @@ section {
     top: 20px;
     font-size: 32px;
     z-index: 10; }
-  /* line 582, ../sass/index.scss */
+  /* line 587, ../sass/index.scss */
   .modal-dialog .modal-header {
     height: 111px;
     background-color: #fed939;
     position: relative;
     padding-left: 160px; }
-    /* line 587, ../sass/index.scss */
+    /* line 592, ../sass/index.scss */
     .modal-dialog .modal-header .photo {
       position: absolute;
       border-radius: 50%;
       top: 20px;
       left: 40px;
       background-color: #f6f6f6; }
-    /* line 594, ../sass/index.scss */
+    /* line 599, ../sass/index.scss */
     .modal-dialog .modal-header .name {
       padding-top: 45px;
       margin-bottom: 10px;
       font-size: 18px; }
-    /* line 599, ../sass/index.scss */
+    /* line 604, ../sass/index.scss */
     .modal-dialog .modal-header .title {
       font-size: 14px; }
-  /* line 603, ../sass/index.scss */
+  /* line 608, ../sass/index.scss */
   .modal-dialog .modal-body {
     padding: 40px; }
-    /* line 605, ../sass/index.scss */
+    /* line 610, ../sass/index.scss */
     .modal-dialog .modal-body .intro-wrap {
       margin-bottom: 25px; }
-      /* line 607, ../sass/index.scss */
+      /* line 612, ../sass/index.scss */
       .modal-dialog .modal-body .intro-wrap p {
         text-indent: 2em;
         line-height: 1.8em;
         font-size: 14px; }
-    /* line 613, ../sass/index.scss */
+    /* line 618, ../sass/index.scss */
     .modal-dialog .modal-body .topic-wrap {
       margin-bottom: 25px; }
-      /* line 615, ../sass/index.scss */
+      /* line 620, ../sass/index.scss */
       .modal-dialog .modal-body .topic-wrap .topic {
         margin-top: 20px;
         margin-bottom: 10px;
         font-size: 18px; }
-      /* line 620, ../sass/index.scss */
+      /* line 625, ../sass/index.scss */
       .modal-dialog .modal-body .topic-wrap p {
         line-height: 1.8em;
         font-size: 14px; }
-    /* line 625, ../sass/index.scss */
+    /* line 630, ../sass/index.scss */
     .modal-dialog .modal-body .datetime-wrap {
       margin-top: 10px;
       font-size: 14px; }
-      /* line 626, ../sass/index.scss */
+      /* line 631, ../sass/index.scss */
       .modal-dialog .modal-body .datetime-wrap .iconfont {
         margin-right: 10px; }
-    /* line 632, ../sass/index.scss */
+    /* line 637, ../sass/index.scss */
     .modal-dialog .modal-body .location-wrap {
       margin-top: 10px;
       font-size: 14px; }
-      /* line 633, ../sass/index.scss */
+      /* line 638, ../sass/index.scss */
       .modal-dialog .modal-body .location-wrap .iconfont {
         margin-right: 10px; }
 
-/* line 642, ../sass/index.scss */
+/* line 647, ../sass/index.scss */
 .jqmOverlay {
   background-color: #fff; }
