--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -110,6 +110,11 @@ body {
         height: 34px;
     }
 }
+@media (max-width: 1000px) {
+    .container {
+        width: 100%;
+    }
+}
 
 .navbar {
     position: fixed;
@@ -217,7 +222,7 @@ section {
         display: block;
         width: 406px;
         font-size: 0;
-        margin-top: 10px;
+        margin-top: 40px;
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 30px;
