--- a/src/css/standardize.css
+++ b/src/css/standardize.css
@@ -1,13 +1,11 @@
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
-
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
-
 /**
  * Correct `block` display not defined in IE 8/9.
  */
-
+/* line 11, ../sass/standardize.scss */
 article,
 aside,
 details,
@@ -20,286 +18,263 @@ main,
 nav,
 section,
 summary {
-    display: block;
-}
+  display: block; }
 
 /**
  * Correct `inline-block` display not defined in IE 8/9.
  */
-
+/* line 30, ../sass/standardize.scss */
 audio,
 canvas,
 video {
-    display: inline-block;
-}
+  display: inline-block; }
 
 /**
  * Prevent modern browsers from displaying `audio` without controls.
  * Remove excess height in iOS 5 devices.
  */
-
+/* line 41, ../sass/standardize.scss */
 audio:not([controls]) {
-    display: none;
-    height: 0;
-}
+  display: none;
+  height: 0; }
 
 /**
  * Address styling not present in IE 8/9.
  */
-
+/* line 50, ../sass/standardize.scss */
 [hidden] {
-    display: none;
-}
+  display: none; }
 
 /* ==========================================================================
    Base
    ========================================================================== */
-
 /**
  * 1. Set default font family to sans-serif.
  * 2. Prevent iOS text size adjust after orientation change, without disabling
  *    user zoom.
  * 3. Ensure that the HTML is always 100% height. This fixed body height issues in Chrome for example.
  */
-
+/* line 65, ../sass/standardize.scss */
 html {
-    font-family: sans-serif; /* 1 */
-    -webkit-text-size-adjust: 100%; /* 2 */
-    -ms-text-size-adjust: 100%; /* 2 */
-    min-height: 100%;
-}
+  font-family: sans-serif;
+  /* 1 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
+  -ms-text-size-adjust: 100%;
+  /* 2 */
+  min-height: 100%; }
 
 /**
  * Remove default margin.
  */
-
+/* line 76, ../sass/standardize.scss */
 body {
-    margin: 0;
-}
+  margin: 0; }
 
 /* ==========================================================================
    Links
    ========================================================================== */
-
 /**
  * Address `outline` inconsistency between Chrome and other browsers.
  */
-
+/* line 88, ../sass/standardize.scss */
 a:focus {
-    outline: thin dotted;
-}
+  outline: thin dotted; }
 
 /**
  * Improve readability when focused and also mouse hovered in all browsers.
  */
-
+/* line 96, ../sass/standardize.scss */
 a:active,
 a:hover {
-    outline: 0;
-}
+  outline: 0; }
 
 /* ==========================================================================
    Typography
    ========================================================================== */
-
 /**
  * Address variable `h1` font-size and margin within `section` and `article`
  * contexts in Firefox 4+, Safari 5, and Chrome.
  */
-
+/* line 110, ../sass/standardize.scss */
 h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
-}
+  font-size: 2em;
+  margin: 0.67em 0; }
 
 /**
  * Address styling not present in IE 8/9, Safari 5, and Chrome.
  */
-
+/* line 119, ../sass/standardize.scss */
 abbr[title] {
-    border-bottom: 1px dotted;
-}
+  border-bottom: 1px dotted; }
 
 /**
  * Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
  */
-
+/* line 127, ../sass/standardize.scss */
 b,
 strong {
-    font-weight: bold;
-}
+  font-weight: bold; }
 
 /**
  * Address styling not present in Safari 5 and Chrome.
  */
-
+/* line 136, ../sass/standardize.scss */
 dfn {
-    font-style: italic;
-}
+  font-style: italic; }
 
 /**
  * Address differences between Firefox and other browsers.
  */
-
+/* line 144, ../sass/standardize.scss */
 hr {
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-    height: 0;
-}
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  height: 0; }
 
 /**
  * Address styling not present in IE 8/9.
  */
-
+/* line 154, ../sass/standardize.scss */
 mark {
-    background: #ff0;
-    color: #000;
-}
+  background: #ff0;
+  color: #000; }
 
 /**
  * Correct font family set oddly in Safari 5 and Chrome.
  */
-
+/* line 163, ../sass/standardize.scss */
 code,
 kbd,
 pre,
 samp {
-    font-family: monospace, serif;
-    font-size: 1em;
-}
+  font-family: monospace, serif;
+  font-size: 1em; }
 
 /**
  * Improve readability of pre-formatted text in all browsers.
  */
-
+/* line 175, ../sass/standardize.scss */
 pre {
-    white-space: pre-wrap;
-}
+  white-space: pre-wrap; }
 
 /**
  * Set consistent quote types.
  */
-
+/* line 183, ../sass/standardize.scss */
 q {
-    quotes: "\201C" "\201D" "\2018" "\2019";
-}
+  quotes: "\201C" "\201D" "\2018" "\2019"; }
 
 /**
  * Address inconsistent and variable font size in all browsers.
  */
-
+/* line 191, ../sass/standardize.scss */
 small {
-    font-size: 80%;
-}
+  font-size: 80%; }
 
 /**
  * Prevent `sub` and `sup` affecting `line-height` in all browsers.
  */
-
+/* line 199, ../sass/standardize.scss */
 sub,
 sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
-}
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline; }
 
+/* line 207, ../sass/standardize.scss */
 sup {
-    top: -0.5em;
-}
+  top: -0.5em; }
 
+/* line 211, ../sass/standardize.scss */
 sub {
-    bottom: -0.25em;
-}
+  bottom: -0.25em; }
 
 /* ==========================================================================
    Embedded content
    ========================================================================== */
-
 /**
  * Remove border when inside `a` element in IE 8/9.
  */
-
+/* line 223, ../sass/standardize.scss */
 img {
-    border: 0;
-}
+  border: 0; }
 
 /**
  * Correct overflow displayed oddly in IE 9.
  */
-
+/* line 231, ../sass/standardize.scss */
 svg:not(:root) {
-    overflow: hidden;
-}
+  overflow: hidden; }
 
 /* ==========================================================================
    Figures
    ========================================================================== */
-
 /**
  * Address margin not present in IE 8/9 and Safari 5.
  */
-
+/* line 243, ../sass/standardize.scss */
 figure {
-    margin: 0;
-}
+  margin: 0; }
 
 /* ==========================================================================
    Forms
    ========================================================================== */
-
 /**
  * Define consistent border, margin, and padding.
  */
+/* line 254, ../sass/standardize.scss */
 fieldset {
-    margin: 0 2px;
-    padding: 0.35em 0.625em 0.75em;
-}
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em; }
 
 /**
  * 1. Correct `color` not being inherited in IE 8/9.
  * 2. Remove padding so people aren't caught out if they zero out fieldsets.
  */
-
+/* line 264, ../sass/standardize.scss */
 legend {
-    border: 0; /* 1 */
-    padding: 0; /* 2 */
-}
+  border: 0;
+  /* 1 */
+  padding: 0;
+  /* 2 */ }
 
 /**
  * 1. Correct font family not being inherited in all browsers.
  * 2. Correct font size not being inherited in all browsers.
  * 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
  */
-
+/* line 275, ../sass/standardize.scss */
 button,
 input,
 select,
 textarea {
-    font-family: inherit; /* 1 */
-    font-size: 100%; /* 2 */
-    font-weight: inherit; /* 1 */
-    margin: 0; /* 3 */
-    padding: 0;
-}
+  font-family: inherit;
+  /* 1 */
+  font-size: 100%;
+  /* 2 */
+  font-weight: inherit;
+  /* 1 */
+  margin: 0;
+  /* 3 */
+  padding: 0; }
 
 /**
  * Remove the default button background color that browsers set
  */
-
+/* line 290, ../sass/standardize.scss */
 button {
-    background: transparent;
-}
+  background: transparent; }
 
 /**
  * Address Firefox 4+ setting `line-height` on `input` using `!important` in
  * the UA stylesheet.
  */
-
+/* line 299, ../sass/standardize.scss */
 button,
 input {
-    line-height: normal;
-}
+  line-height: normal; }
 
 /**
  * Address inconsistent `text-transform` inheritance for `button` and `select`.
@@ -307,19 +282,17 @@ input {
  * Correct `button` style inheritance in Chrome, Safari 5+, and IE 8+.
  * Correct `select` style inheritance in Firefox 4+ and Opera.
  */
-
+/* line 311, ../sass/standardize.scss */
 button,
 select {
-    text-transform: none;
-}
+  text-transform: none; }
 
 /**
  * Make sure selects don't get the default browser styles.
  */
+/* line 319, ../sass/standardize.scss */
 select {
-  -webkit-appearance: none;
-}
-
+  -webkit-appearance: none; }
 
 /**
  * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
@@ -328,95 +301,94 @@ select {
  * 3. Improve usability and consistency of cursor style between image-type
  *    `input` and others.
  */
-
+/* line 332, ../sass/standardize.scss */
 button,
-html input[type="button"], /* 1 */
+html input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-    -webkit-appearance: button; /* 2 */
-    cursor: pointer; /* 3 */
-}
+  -webkit-appearance: button;
+  /* 2 */
+  cursor: pointer;
+  /* 3 */ }
 
 /**
  * Re-set default cursor for disabled elements.
  */
-
+/* line 344, ../sass/standardize.scss */
 button[disabled],
 html input[disabled] {
-    cursor: default;
-}
+  cursor: default; }
 
 /**
  * 1. Address box sizing set to `content-box` in IE 8/9.
  * 2. Remove excess padding in IE 8/9.
  */
-
+/* line 354, ../sass/standardize.scss */
 input[type="checkbox"],
 input[type="radio"] {
-    box-sizing: border-box; /* 1 */
-    padding: 0; /* 2 */
-}
+  box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */ }
 
 /**
  * 1. Address `appearance` set to `searchfield` in Safari 5 and Chrome.
  * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
  *    (include `-moz` to future-proof).
  */
-
+/* line 366, ../sass/standardize.scss */
 input[type="search"] {
-    -webkit-appearance: textfield; /* 1 */
-    -moz-box-sizing: content-box;
-    -webkit-box-sizing: content-box; /* 2 */
-    box-sizing: content-box;
-}
+  -webkit-appearance: textfield;
+  /* 1 */
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  /* 2 */
+  box-sizing: content-box; }
 
 /**
  * Remove inner padding and search cancel button in Safari 5 and Chrome
  * on OS X.
  */
-
+/* line 378, ../sass/standardize.scss */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
-    -webkit-appearance: none;
-}
+  -webkit-appearance: none; }
 
 /**
  * Remove inner padding and border in Firefox 4+.
  */
-
+/* line 387, ../sass/standardize.scss */
 button::-moz-focus-inner,
 input::-moz-focus-inner {
-    border: 0;
-    padding: 0;
-}
+  border: 0;
+  padding: 0; }
 
 /**
  * 1. Remove default vertical scrollbar in IE 8/9.
  * 2. Improve readability and alignment in all browsers.
  * 3. Disable resizing by default.
  */
-
+/* line 399, ../sass/standardize.scss */
 textarea {
-    overflow: auto; /* 1 */
-    vertical-align: top; /* 2 */
-    resize: none; /* 3 */
-}
+  overflow: auto;
+  /* 1 */
+  vertical-align: top;
+  /* 2 */
+  resize: none;
+  /* 3 */ }
 
 /* ==========================================================================
    Tables
    ========================================================================== */
-
 /**
  * Remove most spacing between table cells.
  */
-
+/* line 413, ../sass/standardize.scss */
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
+  border-collapse: collapse;
+  border-spacing: 0; }
 
-
-
+/* line 420, ../sass/standardize.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -433,41 +405,50 @@ table, caption, tbody, tfoot, thead, tr, th, td {
   font-style: inherit;
   font-size: 100%;
   font-family: inherit;
-  vertical-align: baseline;
-}
+  vertical-align: baseline; }
+
 /* remember to define focus styles! */
+/* line 439, ../sass/standardize.scss */
 :focus {
-  outline: 0;
-}
+  outline: 0; }
+
+/* line 442, ../sass/standardize.scss */
 body {
   line-height: 1;
   color: black;
-  background: white;
-}
+  background: white; }
+
+/* line 447, ../sass/standardize.scss */
 ol, ul, li {
-  list-style: none;
-}
+  list-style: none; }
+
 /* tables still need 'cellspacing="0"' in the markup */
+/* line 451, ../sass/standardize.scss */
 table {
   border-collapse: separate;
-  border-spacing: 0;
-}
+  border-spacing: 0; }
+
+/* line 455, ../sass/standardize.scss */
 caption, th, td {
   text-align: left;
-  font-weight: normal;
-}
+  font-weight: normal; }
+
+/* line 459, ../sass/standardize.scss */
 blockquote:before, blockquote:after,
 q:before, q:after {
-  content: "";
-}
+  content: ""; }
+
+/* line 463, ../sass/standardize.scss */
 blockquote, q {
-  quotes: "" "";
-}
+  quotes: "" ""; }
+
+/* line 466, ../sass/standardize.scss */
 a,
 a:hover,
 a:visited {
-  text-decoration: none;
-}
+  text-decoration: none; }
+
+/* line 471, ../sass/standardize.scss */
 button,
 input,
 fieldset,
@@ -476,13 +457,22 @@ select {
   font-size: inherit;
   color: inherit;
   border: none;
-  border-radius: 0;
-}
-.clearfix:before, .clearfix:after { content: ""; display: table; }
-.clearfix:after { clear: both; }
-.clearfix { *zoom: 1; }
+  border-radius: 0; }
 
+/* line 481, ../sass/standardize.scss */
+.clearfix:before, .clearfix:after {
+  content: "";
+  display: table; }
+
+/* line 482, ../sass/standardize.scss */
+.clearfix:after {
+  clear: both; }
+
+/* line 483, ../sass/standardize.scss */
+.clearfix {
+  *zoom: 1; }
+
+/* line 485, ../sass/standardize.scss */
 * {
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
